--- a/docs/index.css
+++ b/docs/index.css
@@ -13,7 +13,8 @@ body
 }
 header
 {
-  padding: 30px;
+  /*padding: 30px;*/
+  background-color: #333;
 }
 main
 {
@@ -26,4 +27,10 @@ footer
 img
 {
   width: 100px;
+  line-height: 0;
+}
+button
+{
+  padding: 20px;
+  border-radius: 10px;
 }
