--- a/docs/index.css
+++ b/docs/index.css
@@ -13,8 +13,8 @@ body
 }
 header
 {
-  /*padding: 30px;*/
   background-color: #333;
+  position: relative;
 }
 main
 {
@@ -31,10 +31,43 @@ img
 }
 button
 {
+  font-size: 1.2rem;
   padding: 20px;
   border-radius: 10px;
+}
+form
+{
+  display: grid;
+  max-width: 400px;
+  margin: 20px auto;
+  padding: 30px;
+  grid-row-gap: 30px;
+  background-color: #ddd;
+}
+label
+{
+  text-align: left;
+  color: #999;
+}
+input
+{
+  display: block;
+  width: 100%;
+  box-sizing: border-box;
+  max-width: none;
+  border: none;
+  font-size: 2rem;
+  padding: .2em;
+  text-align: center;
 }
 .Wrapper
 {
   line-height: 0;
+}
+.ToggleButton
+{
+  position: absolute;
+  top: 0;
+  right: 0;
+  margin: 1rem;
 }
