--- a/docs/index.css
+++ b/docs/index.css
@@ -18,7 +18,11 @@ header
 }
 main
 {
-  padding: 30px;
+  /*padding: 30px;*/
+}
+h1
+{
+  margin: 50px 0;
 }
 footer
 {
@@ -43,11 +47,13 @@ form
   padding: 30px;
   grid-row-gap: 30px;
   background-color: #ddd;
+  border-radius: 10px;
 }
 label
 {
   text-align: left;
   color: #999;
+  font-size: .9rem;
 }
 input
 {
